# lnreader-extended

./: .eslintrc.js  .gitignore  .prettierrc.js  App.tsx  README.md  app.json  babel.config.js  env.d.ts  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rock.config.mjs  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: beta_release.yml  build.yml  testing.yml
__mocks__/: database.js  nativeModules.js
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
drizzle/: migrations.js
drizzle/20260602175528_famous_serpent_society/: migration.sql  snapshot.json
drizzle/20260716072509_faithful_marvex/: migration.sql  snapshot.json
ios/LNReader/: LNReader-Bridging-Header.h
ios/LNReader.xcodeproj/: project.pbxproj
modules/nitro-epub/: NitroEpub.podspec  README.md  nitro.json  package.json
modules/nitro-epub/android/: CMakeLists.txt  build.gradle  gradle.properties
modules/nitro-epub/android/src/main/cpp/: cpp-adapter.cpp
modules/nitro-epub/android/src/main/java/com/margelo/nitro/nitroepub/: NitroEpubPackage.kt
patches/: @rock-js__plugin-metro@0.12.12.patch  drizzle-orm@1.0.0-beta.22.patch  react-native-webview@13.16.1.patch
plugins/: withAndroidCustomizations.js
scripts/: generate-env-file.cjs  jest-db-global-teardown.cjs
specs/: NativeCDPProxy.ts  NativeEpub.ts  NativeFile.ts  NativeLocalServer.ts  NativeMaterialYou.ts  NativeNetwork.ts  NativeSPenRemote.ts  NativeZipArchive.ts
src/components/: Common.tsx  (+7 more)
(+574 files in other folders)
